Projeto/Compilador/tests/cases/error/T22.pas
program T22;
var r: real;
begin
  for r := 1 to 3 do
    writeln(r);
end.
